--- a/html/index.html
+++ b/html/index.html
@@ -11,16 +11,16 @@
     </head>
 <body>
 <!-- ACCUEIL -->
-    <header class="fixed-top">
+    <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
+            <a class="navbar-brand" href="#">F.F.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         
             <div class="collapse navbar-collapse" id="menu">
-                <ul class="navbar-nav me-auto mb-2">
+                <ul class="navbar-nav mr-auto mb-2">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#propos">À Propos</a>
                     </li>
@@ -34,16 +34,27 @@
     </header>
 <!-- PARTIE PORTFOLIO -->
     <main>
-        <article id="propos">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aliquid aperiam maiores voluptatibus nesciunt? Quisquam, iste obcaecati beatae provident voluptatibus neque molestias eaque corrupti inventore laboriosam consectetur, dolore eveniet adipisci.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sunt esse laudantium magni vitae commodi fugit temporibus doloribus consequuntur maiores quia reiciendis cumque quibusdam voluptatum, praesentium autem omnis cum nobis.</p>
-<!-- PARTIE CONTACT -->            
+    <section id="propos">  
+        <div class="cube">
+            <div class="side" id="front"></div>
+            <div class="side" id="bottom"></div>
+            <div class="side" id="top"></div>
+            <div class="side" id="left"></div>
+            <div class="side" id="right"></div>
+            <div class="side" id="back"></div>
+        </div>
+    </section>  
+<!-- PARTIE CONTACT --> 
+            <section id="contact">
+                <h2>À Propos</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sunt esse laudantium magni vitae commodi fugit temporibus doloribus consequuntur maiores quia reiciendis cumque quibusdam voluptatum, praesentium autem omnis cum nobis.</p>
+            </section>
         </article>
-        
-    </main>
-    <footer class="fixed-bottom text-center">
-        mentions légales
-    </footer>
+
+        </main>
+        <footer class="fixed-bottom text-center">
+            mentions légales
+        </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/2cf8922f6a.js" crossorigin="anonymous"></script>
