problème rotation cube

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">F.F.</a>
+            <a class="navbar-brand" id="logo" href="#"><img class="rounded-circle"src="../assets/logo cv.png" alt="Logo" width="35%"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,19 +34,21 @@
     </header>
 <!-- PARTIE PORTFOLIO -->
     <main>
-    <section id="propos">  
+        <h2>À Propos</h2>
+    <section id="propos">
+        
         <div class="cube">
             <div class="side" id="front"></div>
-            <div class="side" id="bottom"></div>
             <div class="side" id="top"></div>
-            <div class="side" id="left"></div>
+            <div class="side" id="bottom"></div>
             <div class="side" id="right"></div>
+            <div class="side" id="left"></div>
             <div class="side" id="back"></div>
         </div>
     </section>  
 <!-- PARTIE CONTACT --> 
             <section id="contact">
-                <h2>À Propos</h2>
+                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sunt esse laudantium magni vitae commodi fugit temporibus doloribus consequuntur maiores quia reiciendis cumque quibusdam voluptatum, praesentium autem omnis cum nobis.</p>
             </section>
         </article>
