cube fait mais problème de rotation

--- a/html/index.html
+++ b/html/index.html
@@ -34,9 +34,16 @@
     </header>
 <!-- PARTIE PORTFOLIO -->
     <main>
-        <h2>À Propos</h2>
-    <section id="propos">
-        
+        <article>
+        <section id="propos">
+        <h2 class="text-center">À Propos</h2>
+
+        <div class="container">
+            <p class="text-center">Autodidacte depuis peu, j'ai décidé de démissionner, afin de me lancer dans une reconversion à temps complet en tant que développeur web.
+                Dans le cadre d'une formation auprès de l'A.F.P.A., je recherche une entreprise qui pourra m'accueillir lors d'un stage en immersion.
+                La période d'une durée de 2 mois, débutera dès septembre 2023, cette immersion me permettra de valider mon diplôme.</p>
+            <p class="text-center "> Vous trouverez mon <a download href="../assets/cv_provisoire_stage_2023-2.pdf">C.V.</a>en cliquant dessus.</p>
+            </div> 
         <div class="cube">
             <div class="side" id="front"></div>
             <div class="side" id="top"></div>
@@ -47,15 +54,30 @@
         </div>
     </section>  
 <!-- PARTIE CONTACT --> 
-            <section id="contact">
-                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sunt esse laudantium magni vitae commodi fugit temporibus doloribus consequuntur maiores quia reiciendis cumque quibusdam voluptatum, praesentium autem omnis cum nobis.</p>
+            <section id="propos">
+   
             </section>
-        </article>
+            <section id="contact">
 
+            </section>
+            <form>
+                <h2 class="text-center">Me Contacter</h2>
+                <div class="mb-4">
+                    <label for="exampleFormControlInput1" class="form-label">Adresse e-mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Envoyer</button>
+                </div>
+            </form>
+        </article>
         </main>
         <footer class="fixed-bottom text-center">
-            mentions légales
+            <a href="">mentions légales</a>
         </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
