--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
                 <div class="d-flex justify-content-around">
                 
                     <div class="d-block text-center wave">
-                        <img src="../assets/enCours.png" class="d-block w-100" alt="Mon premier site">
+                        <img src="../assets/afpa.jpeg" class="d-block w-100" alt="Mon premier site">
                         <div class="card-body">
                             <h5 class="card-title">Site Web AFPA</h5>
                             <p class="card-text">1er Exercice</p>
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="d-block text-center wave">
-                        <img src="../assets/enCours.png" class="d-block w-100" alt="Mon Evaluation en cours de formation">
+                        <img src="../assets/SofM-cover.png" class="d-block w-100" alt="Mon Evaluation en cours de formation">
                         <div class="card-body">
                             <h5 class="card-title">Sound of memories</h5>
                             <p class="card-text">En cours de travail</p>
@@ -118,20 +118,20 @@
                                 <div class="row register-form">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                           <input type="text" class="form-control" placeholder="First Name *" value="" />
+                                           <input type="text" class="form-control my-3" placeholder="First Name *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                                            <input type="text" class="form-control my-3" placeholder="Last Name *" value="" />
                                         </div>
                                         </div>
                                     <div class="col-md-6">
-                                        <div class="form-group">
+                                        <div class="form-group my-3">
                                             <input type="email" class="form-control" placeholder="Your Email *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
+                                            <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control my-3" placeholder="Your Phone *" value="" />
                                         </div>
-                                        <div>
+                                    </div>
                                         <div class="align-content-center">
                                         <input type="submit" class="btn btn-primary"  value="C'est Parti!"/>
                                         </div>
