--- a/html/index.html
+++ b/html/index.html
@@ -57,12 +57,11 @@
             </div>
 
             <!--PORTFOLIO-->
+            <h2 class="text-center portfolio">Mon portfolio</h2>
             <div id="cards_landscape_wrap-2">
-                <h2 class="text-center portfolio">Mon portfolio</h2>
                 <div class="container">
                     <div class="row justify-content-around">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
@@ -117,11 +116,11 @@
         <footer class="text-center">
             <h2 class="text-center">Me Contacter</h2>
                 <div class="d-flex justify-content-around fa-4x">
-                <a href=""><i class="fa-brands fa-github"></i></a>
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                <a href=""><i class="fa-brands fa-discord"></i></a>
-                <a href=""><i class="fa-brands fa-slack"></i></a>
-                <a href=""><i class="fa-brands fa-windows"></i></a>
+                <a href="https://github.com/FredFreeb" target=_blank><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/frederic-fribel-5122721b8" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://discord.gg/4s375Xyf37" target=_blank><i class="fa-brands fa-discord"></i></a>
+                <a href="https://join.slack.com/t/fredcodegroupe/shared_invite/zt-1qzda60qe-23PAGA3rbelrAwyP5~eBnQ" target=_blank><i class="fa-brands fa-slack"></i></a>
+                <a href="https://teams.live.com/l/invite/FEAqdGImzt2e3EeQQM" target=_blank><i class="fa-brands fa-windows"></i></a>
                 </div>
                 <hr>
             <div class="container register">
