lien site afpa fait

--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,7 @@
                                         <div class="text-container">
                                             <h6>Site Afpa</h6>
                                             <p>Mon premier exercice respectant un cahier des charges</p>
-                                            <a href="https://fredfreeb.github.io/RenduFinalAfpaFribel/html/index.html" class="btn btn-primary">Rendre Visite</a>
+                                            <a href="https://fredfreeb.github.io/RenduFinalAfpaFribel/html/index.html" target="_blank" class="btn btn-primary">Rendre Visite</a>
                                         </div>
                                     </div>
                                 </div>
