retrait de  ..devant/

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport"   content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../assets/ongletIcon.png">
+        <link rel="icon" href="/assets/ongletIcon.png">
         <title>Your future employee</title>
-        <link rel="stylesheet" href="../scss/bootstrap.css">
-        <link rel="stylesheet" href="../sass/style.css">
-        <link rel="stylesheet" href="../sass/portfolio.css">
+        <link rel="stylesheet" href="/scss/bootstrap.css">
+        <link rel="stylesheet" href="/sass/style.css">
+        <link rel="stylesheet" href="/sass/portfolio.css">
         
     </head>
 <body>
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="navbar-brand" id="logo" href="#"><img class="rounded-circle" src="../assets/logoCv.png" alt="Logo"></a>
+            <a class="navbar-brand" id="logo" href="#"><img class="rounded-circle" src="/assets/logoCv.png" alt="Logo"></a>
         </div>
         </nav>
         <h1 class="text-center">Frédéric FRIBEL<br>Développeur full-stack</h1> 
@@ -42,7 +42,7 @@
                 <p class="text-center">Autodidacte depuis peu, j'ai décidé de démissionner, afin de me lancer dans une reconversion à temps complet en tant que développeur web.
                     Dans le cadre d'une formation auprès de l'A.F.P.A., je recherche une entreprise qui pourra m'accueillir lors d'un stage en immersion.
                     La période d'une durée de 2 mois, débutera dès septembre 2023, cette immersion me permettra de valider mon diplôme.</p>
-                <p class="text-center "> Vous trouverez mon <a download href="../assets/cv_provisoire_stage_2023-2.pdf">C.V.</a> en cliquant dessus.</p>
+                <p class="text-center "> Vous trouverez mon <a download href="/assets/cv_provisoire_stage_2023-2.pdf">C.V.</a> en cliquant dessus.</p>
                 <p class="text-center ">Voici mes languages & frameworks utilisés:</p>
             </div> 
             </section>
@@ -65,7 +65,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="../assets/afpa.jpeg" alt="Exercice Afpa Html/css" >
+                                            <img src="/assets/afpa.jpeg" alt="Exercice Afpa Html/css" >
                                         </div>
                                         <div class="text-container">
                                             <h6>Site Afpa</h6>
@@ -80,7 +80,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="../assets/enCours.png" alt="En travaux" >
+                                            <img src="/assets/enCours.png" alt="En travaux" >
                                         </div>
                                         <div class="text-container">                                    
                                             <h6>Cours2Conduite.com</h6>
@@ -96,7 +96,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="../assets/SofM-cover.png" alt="Mon E.C.F. 1" >
+                                            <img src="/assets/SofM-cover.png" alt="Mon E.C.F. 1" >
                                         </div>
                                         <div class="text-container">
                                             <h6>Sound Of Memories</h6>
@@ -127,8 +127,8 @@
                 <div class="row">
                     <div class="col-md-3 register-left">
                         <h4>I wait you</h4>
-                        <p>Je vous réponds au plus vite!<br>Et ce n'est pas une blague...</p>
-                        <img src="../assets/cameo.png" alt="Je suis un quoka, pas light...">
+                        <p>Je vous réponds au plus vite!<br>Et ce n'est pas une blague !</p>
+                        <img src="/assets/cameo.png" alt="Je suis un quoka, pas light...">
                     </div>
 
                     <div class="col-md-9 register-right" id="contact">
