--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport"   content="width=device-width, initial-scale=1">
-        <link rel="icon" href="/assets/ongletIcon.png">
+        <link rel="icon" href="assets/ongletIcon.png">
         <title>Your future employee</title>
-        <link rel="stylesheet" href="/scss/bootstrap.css">
-        <link rel="stylesheet" href="/sass/style.css">
-        <link rel="stylesheet" href="/sass/portfolio.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link rel="stylesheet" href="sass/portfolio.css">
+        <link rel="stylesheet" href="sass/style.css">
+
         
     </head>
 <body>
@@ -28,7 +29,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="navbar-brand" id="logo" href="#"><img class="rounded-circle" src="/assets/logoCv.png" alt="Logo"></a>
+            <a class="navbar-brand" id="logo" href="#"><img class="rounded-circle" src="assets/logoCv.png" alt="Logo"></a>
         </div>
         </nav>
         <h1 class="text-center">Frédéric FRIBEL<br>Développeur full-stack</h1> 
@@ -42,7 +43,7 @@
                 <p class="text-center">Autodidacte depuis peu, j'ai décidé de démissionner, afin de me lancer dans une reconversion à temps complet en tant que développeur web.
                     Dans le cadre d'une formation auprès de l'A.F.P.A., je recherche une entreprise qui pourra m'accueillir lors d'un stage en immersion.
                     La période d'une durée de 2 mois, débutera dès septembre 2023, cette immersion me permettra de valider mon diplôme.</p>
-                <p class="text-center "> Vous trouverez mon <a download href="/assets/cv_provisoire_stage_2023-2.pdf">C.V.</a> en cliquant dessus.</p>
+                <p class="text-center "> Vous trouverez mon <a download href="assets/cv_provisoire_stage_2023-2.pdf">C.V.</a> en cliquant dessus.</p>
                 <p class="text-center ">Voici mes languages & frameworks utilisés:</p>
             </div> 
             </section>
@@ -65,7 +66,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="/assets/afpa.jpeg" alt="Exercice Afpa Html/css" >
+                                            <img src="assets/afpa.jpeg" alt="Exercice Afpa Html/css" >
                                         </div>
                                         <div class="text-container">
                                             <h6>Site Afpa</h6>
@@ -80,7 +81,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="/assets/enCours.png" alt="En travaux" >
+                                            <img src="assets/enCours.png" alt="En travaux" >
                                         </div>
                                         <div class="text-container">                                    
                                             <h6>Cours2Conduite.com</h6>
@@ -96,7 +97,7 @@
                                 <div class="card-flyer">
                                     <div class="text-box">
                                         <div class="image-box">
-                                            <img src="/assets/SofM-cover.png" alt="Mon E.C.F. 1" >
+                                            <img src="assets/SofM-cover.png" alt="Mon E.C.F. 1" >
                                         </div>
                                         <div class="text-container">
                                             <h6>Sound Of Memories</h6>
