modification pour github

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="col-md-3 register-left">
                         <h4>I wait you</h4>
                         <p>Je vous réponds au plus vite!<br>Et ce n'est pas une blague !</p>
-                        <img src="/assets/cameo.png" alt="Je suis un quoka, pas light...">
+                        <img src="assets/cameo.png" alt="Je suis un quoka, pas light...">
                     </div>
 
                     <div class="col-md-9 register-right" id="contact">
