--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="text-center">Autodidacte depuis peu, j'ai décidé de démissionner, afin de me lancer dans une reconversion à temps complet en tant que développeur web.
                     Dans le cadre d'une formation auprès de l'A.F.P.A., je recherche une entreprise qui pourra m'accueillir lors d'un stage en immersion.
                     La période d'une durée de 2 mois, débutera dès septembre 2023, cette immersion me permettra de valider mon diplôme.</p>
-                <p class="text-center "> Vous trouverez mon <a download href="assets/cv_provisoire_stage_2023-2.pdf">C.V.</a> en cliquant dessus.</p>
+                <p class="text-center "> Vous trouverez mon <a download href="assets/cv_FRIBEL.pdf">C.V.</a> en cliquant dessus.</p>
                 <p class="text-center ">Voici mes languages & frameworks utilisés:</p>
             </div> 
             </section>
